--- a/package.json
+++ b/package.json
@@ -12,8 +12,15 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@fullcalendar/core": "^6.1.17",
+    "@fullcalendar/daygrid": "^6.1.17",
+    "@fullcalendar/interaction": "^6.1.17",
+    "@fullcalendar/react": "^6.1.17",
+    "@fullcalendar/timegrid": "^6.1.17",
     "@mui/icons-material": "^5.17.1",
     "@mui/material": "^5.17.1",
+    "@mui/x-date-pickers": "^8.3.1",
+    "date-fns": "^4.1.0",
     "next": "14.1.0",
     "next-auth": "5.0.0-beta.3",
     "react": "^18.2.0",
